# rust-xmlrpc

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/: ros_client_example.rs  simple.rs
src/: client.rs  encoding.rs  lib.rs  protocol.rs
