[package]
name = "rust-xmlrpc"
version = "0.0.6"
description = "Minimal Rust XML-RPC library"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/gch/rust-xmlrpc"
authors = ["Galen Clark Haynes <gch@users.noreply.github.com>"]

[lib]
name = "xmlrpc"
path = "src/lib.rs"

[dependencies]
rustc-serialize = "0.3"
xml-rs = "0.1.12"
hyper = "0.5"
num = "*"

[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs
debug-assertions = true  # Controls whether debug assertions are enabled
codegen-units = 1 # Controls whether the compiler passes `-C codegen-units`
                  # `codegen-units` is ignored when `lto = true`

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "ros_client_example"
path = "examples/ros_client_example.rs"

